--- a/demo/demo.css
+++ b/demo/demo.css
@@ -4,14 +4,18 @@ iframe {
 
 video {
     border: 1px solid;
-    background-color: black;
+    background-color: purple;
 }
 
 #skipAd {
-    display: none;
+    /* display: none; */
     position: absolute;
     right: 10px;
     bottom: 50px;
-    z-index: 2;
+    z-index: 200;
+}
+
+#container {
+    position: absolute; top:100px; left: 60px; width:480px; height:360px;
 }
 
